2011-11-05  Vincent Torri  <doursse at users dot sf dot net>

	* Makefile.am:
	minor cleanup of the maintainer-clean rule

	* configure.ac:
	* src/lib/poppler/epdf_poppler_postscript.cpp:
	fix API use when poppler >= 0.15.2 is installed

	* src/Makefile.am:
	* src/lib/Makefile.am:
	* src/bin/Makefile.am:
	* src/plugins (deleted):
	* src/plugins/ewl (deleted):
	* src/plugins/ewl/ewl_pdf.c (deleted):
	* src/plugins/ewl/Makefile.am (deleted):
	* src/plugins/Makefile.am (deleted):
	* src/lib/ewl_pdf.c (deleted):
	* src/lib/ewl_pdf.h (deleted):
	* src/bin/epdf_ewl_test.c (deleted):
	* epdf-ewl.pc.in (deleted):
	remove Ewl support

2011-09-13 Rafael Antognolli <antognolli at profusion dot mobi>

	Make epdf_page_size_get() return the correct page size.

	* src/lib/poppler/epdf_poppler_page.cpp:
	Return the page size using page->makeBox(), instead of
	page->getMediaHeigh() and page->getMediaWidth().

2011-02-04  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	Support Evil inclusion and better pkg-config support.

	* src/lib/mupdf/epdf_mupdf_document.c:
	Use Evil for asprintf on Windows.

	* src/lib/mupdf/epdf_mupdf_index.c:
	use correctly Eina_List lists.

2010-07-02  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/epdf_esmart_test.c:
	* src/bin/epdf_evas_test.c:
	Fix returned type of callbacks

	* src/lib/mupdf/Makefile.am:
	fix parallel builds with the mupdf backend

2010-06-25  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/mupdf/epdf_mupdf_page.c:
	remove time measurement

2010-06-09  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/mupdf/Makefile.am:
	* src/lib/mupdf/epdf_mupdf_document.c:
	* src/lib/mupdf/epdf_mupdf_fontinfo.c:
	* src/lib/mupdf/epdf_mupdf_fontinfo.c (added):
	add missing functions in mupdf backend (dummy ones)

2010-06-07  Vincent Torri  <doursse at users dot sf dot net>

	Add mupdf 0.5 backend. That backend is statically linked
	to epdf, hence epdf will significantly be bigger with that