@@ -1,3 +1,10 @@
+2012-02-12  Vincent Torri  <doursse at users dot sf dot net>
+
+	* configure.ac:
+	* src/lib/mupdf/Makefile.am:
+	* src/lib/poppler/Makefile.am:
+	fix DSO link errors
+
 2011-11-05  Vincent Torri  <doursse at users dot sf dot net>
 
 	* Makefile.am:
